# ace

./: .gitignore  README.md
apps/ai_practice/: pyproject.toml
apps/common/: README.md  main.py  pyproject.toml
apps/common/app/: __init__.py  api.py
apps/common/conf/: .env
apps/common/src/apis/: __init__.py  stt.py
apps/common/src/grpc_impl/: stt_service.py
apps/common/src/protos/: stt_pb2.py  stt_pb2_grpc.py
apps/common/src/recognition/: __init__.py  main.py
apps/common/src/services/: recognition.py
libs/common/: pyproject.toml
libs/test_client/: README.md  activate_poetry.sh  captured_audio.pcm  main.py  pyproject.toml
libs/test_client/result/: result_20250324_011800.json
libs/test_client/src/protos/: stt.proto  stt_pb2.py  stt_pb2_grpc.py
